tests/checker/ok/disambiguating_same_typed.can
Birthday = String

OtherUser = User

User = Birthday * Username

Username = String

equals = (OtherUser * User) => Bool {
    True()
}

Unit => Program {
    "compared" -> Print
}
