tests/checker/fail/legacy_dot_dispatch.can
Unit => Program {
    True().(
        * False => Unit { "no" -> Print }
        * True => Unit { "yes" -> Print }
    )
}
